Leetcode feat DFS